--- a/css/main.scss
+++ b/css/main.scss
@@ -1,5 +1,5 @@
-$background: #9b59b6;
-$tabs-base-color: #8e44ad;
+$background: #bc3713;
+$tabs-base-color: #0000ff;
 * {
   margin: 0;
   padding: 0; 
